Separate the types of tests
Unit and integration tests are developed at different times and they are also executed in different contexts. To achieve this, the testing script has been split into 2 (test:unit & test:integration)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "webpack --watch --mode=development",
     "build": "webpack --mode=production",
-    "test": "jest"
+    "test:unit": "jest --config=jest.test.unit.config.js",
+    "test:integration": "jest --config=jest.test.integration.config.js"
   },
   "repository": {
     "type": "git",
